restructured home page and added styling.

--- a/style.css
+++ b/style.css
@@ -3,4 +3,25 @@ body {
 	   and use the OS’s UI font as the website font
 	 */
   font: 100%/1.5 system-ui;
+  max-width: 80ch;
+  margin-inline: max(1em, (100% - 80ch) / 2);
+
+}
+
+nav {
+  display: flex;
+  margin-bottom: 2rem;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
+}
+
+nav a {
+  flex: 1;
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  padding: 0.5em;
+
+
 }
