--- a/projects/style.css
+++ b/projects/style.css
@@ -4,3 +4,38 @@ body {
 	 */
   font: 100%/1.5 system-ui;
 }
+
+nav {
+  display: flex;
+  margin-bottom: 2rem;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
+}
+
+nav a {
+  flex: 1;
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  padding: 0.5em;
+
+}
+
+nav a.current {
+  border-bottom: 0.4em solid oklch(80% 3% 200);
+  padding-bottom: 0.1em
+}
+
+a:hover {
+  color: var(--color-accent);
+  background-color: oklch(from var(--color-accent) 95% 5% h);
+}
+
+:root{
+  --color-accent: oklch(60% 0.25 30);
+}
+
+html {
+  accent-color: var(--color-accent);
+}
