--- a/CV/style.css
+++ b/CV/style.css
@@ -4,3 +4,85 @@ body {
 	 */
   font: 100%/1.5 system-ui;
 }
+
+nav {
+  display: flex;
+  margin-bottom: 2rem;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
+}
+
+nav a {
+  flex: 1;
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  padding: 0.5em;
+
+}
+
+nav a.current {
+  border-bottom: 0.4em solid oklch(80% 3% 200);
+  padding-bottom: 0.1em
+}
+
+a:hover {
+  color: var(--color-accent);
+  background-color: oklch(from var(--color-accent) 95% 5% h);
+}
+
+:root{
+  --color-accent: oklch(60% 0.25 30);
+}
+
+html {
+  accent-color: var(--color-accent);
+}
+
+main {
+  max-width: 60ch;
+  margin-inline: auto;
+  padding: 2rem;
+}
+
+h1 {
+  font-size: 400%;
+  margin-bottom: 0.5rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.1;
+  text-wrap: balance;
+}
+
+h2 {
+  font-size: 150%;
+  margin-top: 2rem;
+  border-bottom: 1px solid var(--color-accent);
+  padding-bottom: 0.25em;
+}
+
+h3 {
+  font-size: 120%;
+  margin-top: 1rem;
+  color: oklch(40% 0.1 30);
+}
+
+section {
+  margin-bottom: 2rem;
+}
+
+ul {
+  padding-left: 1.25em;
+  margin-bottom: 1.5em;
+}
+
+ul li {
+  margin-bottom: 0.5em;
+}
+
+header {
+  text-align: center;
+  margin-bottom: 3rem;
+}
