--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body {
 }
 
 nav {
+  --border-color: oklch(50% 10% 200 / 40%);
   display: flex;
   margin-bottom: 2rem;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: oklch(80% 3% 200);
+  border-bottom-color: var(--border-color);
 }
 
 nav a {
@@ -26,13 +27,13 @@ nav a {
 }
 
 nav a.current {
-  border-bottom: 0.4em solid oklch(80% 3% 200);
+  border-bottom: 0.4em solid var(--border-color);
   padding-bottom: 0.1em
 }
 
 a:hover {
-  color: var(--color-accent);
-  background-color: oklch(from var(--color-accent) 95% 5% h);
+  border-bottom: 0.4em solid var(--color-accent);
+  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
 
 :root{
@@ -41,6 +42,7 @@ a:hover {
 
 html {
   accent-color: var(--color-accent);
+  color-scheme: dark;
 }
 
 .projects {
@@ -107,6 +109,14 @@ header {
   border-bottom: 1px solid var(--color-accent)
 }
 
-.cv-subheading {
-  color: oklch(40% 0.1 30)
+label.color-scheme {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 80%;
+}
+
+input, textarea, button, select {
+  font-family: inherit;
+
 }
