projects and github stats on home, projects updated with more real data, projects page JS
added index.js, added lib folder to store projects.json, new features on home page, new js functions in global.js

--- a/style.css
+++ b/style.css
@@ -120,3 +120,20 @@ input, textarea, button, select {
   font-family: inherit;
 
 }
+
+dl {
+  display:grid;
+  grid-template-columns: repeat(4,1fr);
+  
+  
+}
+
+dt {
+  grid-row: 1;
+  font-weight: bold;
+  
+}
+
+dd {
+  grid-row: 2;
+}
