--- a/style.css
+++ b/style.css
@@ -137,3 +137,47 @@ dt {
 dd {
   grid-row: 2;
 }
+
+.project-year {
+  font-size: 0.9em;
+  color: gray;
+}
+
+#projects-pie-plot {
+  max-width: 20em;
+  margin-block: 2em;
+
+  overflow: visible;
+}
+
+.swatch {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  background-color: var(--color);
+  border-radius: 50%;
+}
+
+.legend {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(9em, 1fr));
+  gap: 1em;
+  border: 1px solid oklch(50% 10% 200 / 40%);
+  padding: 0.5em;
+  margin: 1.5em 0;
+  flex: 1;
+
+}
+
+.legend-li {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+
+}
