--- a/style.css
+++ b/style.css
@@ -214,10 +214,65 @@ path {
 }
 
 .legend-li.selected {
-  /* background-color: var(--color); */
-  /* color: white; */
   font-weight: bold;
   border-radius: 0.3em;
   cursor: pointer;
-  /* padding: 0.2em 0.5em; */
+  
+}
+
+.stats {
+  display:grid;
+  grid-template-columns: repeat(6,1fr);
+  font-weight: bold;
+  grid-row: 2;
+  border: 2px solid oklch(50% 10% 200 / 40%);
+  border-radius: 0.5em;
+  box-sizing: border-box;
+  padding: 0.5em;
+  
+}
+
+.gridlines {
+  opacity: 10%;
+}
+
+#chart-title {
+  margin-bottom: .5em;
+}
+
+dl.info {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0.25em 1em;
+  margin: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 3px 3px oklch(50% 10% 200 / 40%),
+  -0.1em 0 0.2em oklch(50% 10% 200 / 40%);
+  border-radius: 0.5em;
+  padding: 0.3em;
+  transition-duration: 500ms;
+  transition-property: opacity, visibility;
+}
+
+dl.info[hidden]:not(:hover, :focus-within) {
+  opacity: 0;
+  visibility: hidden;
+}
+
+#commit-tooltip {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 9999;
+}
+
+circle {
+  transition: 200ms;
+  transform-origin: center;
+  transform-box: fill-box;
+}
+
+circle:hover {
+  transform: scale(1.5);
 }
