--- a/style.css
+++ b/style.css
@@ -271,6 +271,10 @@ circle {
   transition: 200ms;
   transform-origin: center;
   transform-box: fill-box;
+  @starting-style {
+    r:0;
+  }
+  
 }
 
 circle:hover {
@@ -300,6 +304,114 @@ circle.selected {
   align-items: baseline;
 }
 
-#commit-slider-time {
+#commit-time {
   margin-left: auto;
+}
+
+#files {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+
+  > div {
+    grid-column: 1 / -1;
+    display: grid;
+    grid-template-columns: subgrid;
+  }
+
+  dt{
+    grid-column: 1;
+  }
+
+  dd {
+    grid-column: 2;
+  }
+}
+
+.loc {
+  display: flex;
+  width: 0.5em;
+  aspect-ratio: 1;
+  background: var(--color);
+  border-radius: 50%;
+}
+
+#files dd {
+  grid-column: 2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: start;
+  align-content: start;
+  gap: 0.15em;
+  padding-top: 0.6em;
+  margin-left: 0;
+}
+
+dt small {
+  display: block;
+  font-size: 0.75em;
+  opacity: 0.6;
+}
+
+#scrolly-1 {
+  position: relative;
+  display: flex;
+  gap: 1rem;
+
+  > * {
+    flex: 1;
+  }
+}
+
+#scatter-story {
+  position: relative;
+}
+
+#scatter-plot {
+  position: sticky;
+  top: 0;
+  left: 0;
+  bottom: auto;
+  height: 50vh;
+}
+
+.step {
+  padding-bottom: 1.5em;
+}
+
+#scrolly-2 {
+  position: relative;
+  display: flex;
+  gap: 1rem;
+
+  > * {
+    flex: 1;
+  }
+}
+
+#unitvis-story {
+  position: relative;
+}
+
+#unitvis-graphic {
+  position: sticky;
+  top: 0;
+  left: 0;
+  bottom: auto;
+  height: 50vh;
+}
+
+#unitvis-story .step {
+  padding-bottom: 1em;
+}
+
+#unitvis-story::after {
+  content: '';
+  display: block;
+  height: 52vh; /* or more if needed */
+}
+
+#scatter-story::after {
+  content: '';
+  display: block;
+  height: 52vh; /* or more if needed */
 }
